--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ body {
 
       <!-- Image and name container. Change to your pictue here. -->
       <div style="text-align: center">
-        <img src="https://www.w3schools.com/howto/img_link_tree_template2_bio.jpg" class="w3-margin" alt="image" width="150px" height="150px" style="border-radius: 50%;">
-        <p><span class="name w3-padding w3-pink w3-round" style="font-weight: bolder;">Hi, I'm Jane!</span></p>
+        <img src="https://raw.githubusercontent.com/ttuhub/simonpmw/main/public/assets/profilePicCompressed.png" class="w3-margin" alt="image" width="150px" height="150px" style="border-radius: 50%;">
+        <p><span class="name w3-padding w3-pink w3-round" style="font-weight: bolder;">Hi, I'm Simon!</span></p>
         <p style="font-weight: bolder;">Check out my links!</p>
       </div>
 
