--- a/index.html
+++ b/index.html
@@ -76,25 +76,34 @@ body {
       <div style="text-align: center">
         <img src="https://raw.githubusercontent.com/ttuhub/simonpmw/main/public/assets/profilePicCompressed.png" class="w3-margin" alt="image" width="150px" height="150px" style="border-radius: 50%;">
         <p><span class="name w3-padding w3-pink w3-round" style="font-weight: bolder;">Hi, I'm Simon!</span></p>
-        <p style="font-weight: bolder;">Check out my links!</p>
+        <p style="font-weight: bolder;">Here I save my school documents!</p>
       </div>
 
       <!-- Links section 1. Replace the # inside of the "" with your links. -->
-      <h4 class="margin-top-2" style="text-align: center;">MY SOCIAL NETWORKS</h4>
+      <h4 class="margin-top-2" style="text-align: center;">MY DOCUMENTS (in no particular order)</h4>
       <div class="links-container">
-        <a href="#" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Facebook</a>
+        <a href="#" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">CV (Curriculum Vitae)</a>
         <br>
-        <a href="#" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Instagram</a>
+        <a href="https://raw.githubusercontent.com/ttuhub/simonpmw/main/public/assets/M%20FORM%204%20CERT.jpg" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">FORM 4 CERT</a>
         <br>
-        <a href="#" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Twitter</a>
+        <a href="https://raw.githubusercontent.com/ttuhub/simonpmw/main/public/assets/Wokabi%20Simon%20Kibu%20School%20ID%20front%20and%20back.jpg" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">KIBU Student ID</a>
         <br>
-        <a href="#" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Github</a>
+        <a href="#" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">National ID</a>
+        <br>
+        <a href="#" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank"></a>
       </div>
 
       <!-- Links section 2. Replace the # inside of the "" with your links. -->
-      <h4 class="margin-top-2" style="text-align: center;">MY CV</h4>
+      <h4 class="margin-top-2" style="text-align: center;">KIBABII UNIVERSITY</h4>
       <div class="links-container">
-        <a href="#" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Curriculum Vitae</a>
+        <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/techbrv/simonpmw/master/public/assets/KIBABII%20UNIVERSITY%20FEE%20STATEMENT.pdf" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">FEE STATEMENT</a>
+        <br>
+        <a href="https://raw.githubusercontent.com/ttuhub/simonpmw/main/public/assets/Wokabi%20Simon%20Kibu%20School%20ID%20front%20and%20back.jpg" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">STUDENT ID</a>
+        <br>
+        <a href="https://raw.githubusercontent.com/ttuhub/simonpmw/main/public/assets/kibu%20send%20home%20counseling%20letter.png" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">COUNSELLING LETER</a>
+        <br>
+        <a href="https://raw.githubusercontent.com/ttuhub/simonpmw/main/public/assets/kibu%20send%20home%20counseling%20letter.png" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">COUNSELLING LETER</a>
+        <br>
       </div>
 
       <!-- Links section 3. Replace the # inside of the "" with your links. -->
